--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-app",
+  "homepage": "https://MounikaChedalu.github.io/todo-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
